# new-cpp-project-template

./: CMakeLists.txt  README.md  build.sh  valgrind.supp
.github/workflows/: build-and-deploy.yml
contrib/glad/include/glad/: glad.h
contrib/glad/src/: glad.c
src/: main.cc
src/ui/: ui.cc  ui.hh
tests/: tests.cc
